added in error correction

--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
   <link rel="stylesheet" href="/javascript/game.js">
 </head>
   <body>
-    <h1>javascript Fun</h1>
-    <h2>Javascript Game</h2>
+    <h1>Javascript <em>Fun</em></h1>
+    <h2>A little game to test your 5th grade <strong>knowledge</strong>.</h2>
     <p>
-      This game will ask you three questions and you'll have to answer them right or else you'll lose forever.
+      This game will ask you three questions and you'll have to answer them right or a <strong>5th grader is smarter than you</strong>.
     </p>
+    <button onclick="questionButton()">Click to Start</button>
     <script src="javascript/game.js" charset="utf-8"></script>
   </body>
 </html>
